[package]
name = "pookie_db"
version = "0.1.0"
edition = "2021"

[dependencies]
flate2 = "1.0"
serde = { version = "1.0", features = ["derive"] }
rmp-serde = "1.1"
uuid = { version = "1.4", features = ["v4"] }
tokio = { version = "1.32.0", features = ["full"] }
rand = "0.8"
serde_json = "1.0.135"
parking_lot = "0.12.3"
memmap2 = "0.9.5"
lz4_flex = "0.11.3"
smallstring = "0.1.2"
rayon = "1.7"
sysinfo = "0.29"  # Replace sys-info with sysinfo
num_cpus = "1.16"
futures = "0.3" # Replace futures-preview with futures

